Added a generic form to create entities. Added the capability to create and delete projects from the main page. (Visuals temporary)

--- a/TFG_Projects_APP_Frontend/TFG_Projects_APP_Frontend.csproj
+++ b/TFG_Projects_APP_Frontend/TFG_Projects_APP_Frontend.csproj
@@ -66,10 +66,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Components\" />
-	</ItemGroup>
-
-	<ItemGroup>
+	  <MauiXaml Update="Components\CreateModal\ObjectBuilder.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\AppSettingsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
