Added Internationalization (English and Spanish). Fixed minor bugs.

--- a/TFG_Projects_APP_Frontend/TFG_Projects_APP_Frontend.csproj
+++ b/TFG_Projects_APP_Frontend/TFG_Projects_APP_Frontend.csproj
@@ -118,10 +118,22 @@
 	  <Compile Update="Components\ConceptComponents\ConceptBoardComponent.xaml.cs">
 	    <DependentUpon>ConceptBoardComponent.xaml</DependentUpon>
 	  </Compile>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
 		<TrimmerRootDescriptor Include="linker.xml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>PublicResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 </Project>
